CREATE TABLE Columns (
  id SERIAL NOT NULL,
  name VARCHAR(50) NOT NULL,
  position INT NOT NULL,

  PRIMARY KEY (id),
  UNIQUE (id)
);
